# hunkle

./: .gitignore  Cargo.toml  README.md  flake.nix
emacs/: hunkle.el
src/: app.rs  backend.rs  diff.rs  headless.rs  lib.rs  main.rs  model.rs  ui.rs
tests/: headless.rs  hunkle-test.el  integration.rs
