[package]
name = "hunkle"
version = "0.2.0"
edition = "2024"
description = "Split staged changes into multiple commits, hunk by hunk"
license = "MIT"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
crossterm = "0.28"
ratatui = "0.29"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
tempfile = "3"
